--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production nodemon server/server.js & sass --style compressed --watch combined.scss:combined.css",
+    "start": "NODE_ENV=production nodemon server/server.js --open & sass --style compressed --watch combined.scss:combined.css",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development nodemon server/server.js & NODE_ENV=development webpack serve --open & sass --style compressed --watch combined.scss:combined.css"
   },
