--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "NODE_ENV=production nodemon server/server.js --open & sass --style compressed --watch combined.scss:combined.css",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development nodemon server/server.js & NODE_ENV=development webpack serve --open & sass --style compressed --watch combined.scss:combined.css"
@@ -25,11 +25,18 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
+    "jest": "^26.6.3",
+    "jest-puppeteer": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
+    "puppeteer": "^8.0.0",
     "qs": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -40,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
